--- a/style.css
+++ b/style.css
@@ -10,6 +10,30 @@ body {
   margin: 20px;
   /* text-align: center; */
 }
+.switch .C {
+  padding: 5px;
+  border-radius: 5px;
+  color: #080808;
+  border: 4px solid rgb(176, 188, 241);
+  cursor: pointer;
+}
+
+.switch .F {
+  padding: 5px 10px;
+  border: 4px solid rgb(176, 188, 241);
+
+  border-radius: 5px;
+
+  color: #131212;
+  cursor: pointer;
+}
+
+.switch .active {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #aa9311;
+  background-color: rgb(182, 182, 243);
+}
 .error {
   margin-top: -10px;
   margin-left: 17%;
@@ -50,18 +74,14 @@ body {
 .weather-app {
   display: flex;
   justify-content: space-between;
-
   width: 90vw;
-  height: 10vh;
-  /* border: 2px solid black;
-  margin: 20px auto;
+  height: 15vh;
 }
 
 .weather {
-  /* border: 2px solid black; */
   font-size: 20px;
   font-weight: bold;
-  kerning: 0.25;
+  letter-spacing: 0.25px;
   margin-top: -5px;
   color: rgba(33, 33, 33, 0.87);
 }
